--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>South Paw Dog Walking</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link id="theme-link" rel="stylesheet" href="style-blue.css">
 </head>
 <body>
     <header>
@@ -60,6 +60,12 @@
     <footer>
         <p>&copy; 2025 South Paw Dog Walking. All rights reserved.</p>
     </footer>
+
+    <div class="theme-switcher">
+        <button onclick="setTheme('style-blue.css')">Blue</button>
+        <button onclick="setTheme('style-green.css')">Green</button>
+        <button onclick="setTheme('style-dark.css')">Dark</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
